<resources>
    <string name="app_name" formatted="true">MultyImage</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="AppThemeDark">Тема: Темная</string>
    <string name="AppThemeLight">Тема: Светлая</string>
<!--    settings layout-->
    <string name="dest">путь назначения</string>
    <string name="format">Формат преобразования</string>
    <string name="quality">Качество, %</string>
    <string name="size">Размер изображения</string>
    <string name="scale">Масштаб</string>
    <string name="sort">Сортировка</string>
    <string-array name="sortarr">
        <item>_id</item>
        <item>имя</item>
        <item>размер</item>
        <item>сортировка</item>
    </string-array>
    <string name="compression">сжатие</string>
    <string-array name="compressionarr">
        <item>LZV</item>
        <item>JPEG</item>
    </string-array>
    <string name="theme">Тема</string>
    <string-array name="themearr">
        <item>Светлая</item>
        <item>Темная</item>
    </string-array>
    <string-array name="arrayformat">
        <item>TIF</item>
        <item>PDF</item>
    </string-array>
    <string name="tabl_view">Настройка табличного вида</string>
    <string name="settingsDefault">Сбросить настройки</string>
    <string name="path">выберите путь</string>

</resources>